<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/intro_slide_layout_permissions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/introPermissions"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="60dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/intro_title_permissions"
        android:textColor="#FFFFFF"
        android:textSize="36sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/intro_details_permissions"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status_service_enabled"
        android:textColor="@color/successGreen"
        android:textSize="18sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_open_accessibility" />

</LinearLayout>